--- a/styling.css
+++ b/styling.css
@@ -721,18 +721,21 @@ a {
   color: #ddd;
   background-image: linear-gradient(rgba(1, 251, 59, 0.364), rgb(10, 35, 33));
   border: 1px solid black;
-  width: 75%;
+  width: 40%;
+  height: 60%;
   margin: 0 auto;
   text-align: center;
+  font-size: 30px;
+
 }
 
 .contact-info img {
-  height: 25px;
-  width: 30px;
+  height: 50px;
+  width: 50px;
 }
 
 .contact-info:hover {
-  background: rgba(16, 192, 231, 0.588);
+  background: rgba(16, 192, 231, 0.777);
   color: black;
   
 }
