--- a/styling.css
+++ b/styling.css
@@ -725,7 +725,7 @@ a {
   height: 90%;
   margin: 0 auto;
   text-align: center;
-  font-size: 30px;
+  font-size: 25px;
 
 }
 
@@ -738,4 +738,10 @@ a {
   background: rgba(16, 192, 231, 0.777);
   color: black;
   
+}
+
+.contact-container a {
+  text-decoration: none;
+  color: rgb(10, 25, 55);
+  font-size: 29px;
 }
